# esp32s3_project

./: .gitignore  README.md  lv_conf.h  sdkconfig
assets/: convert.mjs  iconfont.json
main/: CMakeLists.txt  app_ui copy.c  app_ui.c  esp32_s3_szp.c  esp32_s3_szp.h  main.c
main/assets/: font_icon.c  font_icon44.c
main/pages/: home.c
main/res/: audio_res.h
main/res/audio/: correct.pcm  wrong.pcm
main/ui/: ui_album.c  ui_album.h  ui_camera.c  ui_camera.h  ui_common.c  ui_common.h  ui_main.c  ui_main.h  ui_music.c  ui_music.h  ui_play.c  ui_play.h  ui_record.c  ui_record.h  ui_setting.c  ui_setting.h  ui_study.c  ui_study.h  ui_weather.c  ui_weather.h
main/ui/album/include/: ui_album.h
main/ui/album/src/: ui_album.c
main/ui/camera/include/: ui_camera.h
main/ui/camera/src/: ui_camera.c
main/ui/common/include/: page_manager.h  ui_common.h
main/ui/common/src/: page_manager.c  ui_common.c
main/ui/main/include/: ui_main.h
main/ui/main/src/: ui_main.c
main/ui/music/include/: ui_music.h
main/ui/music/src/: ui_music.c
main/ui/play/include/: ui_play.h
main/ui/play/src/: ui_play.c
main/ui/record/include/: ui_record.h
main/ui/record/src/: ui_record.c
main/ui/setting/include/: ui_setting.h
main/ui/setting/src/: ui_setting.c
main/ui/study/include/: ui_study.h
main/ui/study/src/: ui_study.c
main/ui/weather/include/: ui_weather.h
main/ui/weather/src/: ui_weather.c
